# pane-resizer

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  styles.scss  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml  vercel_deploy.yml  vercel_preview.yml
.zed/: format.sh  settings.json
jspackages/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  rollup.config.js
jspackages/scripts/: shiki.js
jspackages/src/: lib.rs  shiki.rs
pane-resizer/: Cargo.toml
pane-resizer-docs/: .gitignore  Cargo.toml  index.html  styles.scss
pane-resizer-docs/src/: main.rs
pane-resizer-docs/src/components/: code.rs  theme.rs
pane-resizer-docs/src/icons/: align_justify.rs  book_text.rs  dots_six_vertical.rs  mod.rs  sun_moon.rs
pane-resizer-docs/src/pages/: intro.rs  mod.rs
pane-resizer-docs/src/pages/examples/: mod.rs
pane-resizer-docs/src/utils/: mod.rs
pane-resizer/src/: context.rs  group.rs  lib.rs  pane.rs  resizer.rs
src/: main.rs
src/components/: code.rs  mod.rs
src/icons/: bug.rs  check.rs  github.rs  mod.rs  moon.rs  sun.rs  x.rs
src/pages/: horizontal.rs  intro.rs  mod.rs  nested_groups.rs  scaffold.rs  vertical.rs
src/pages/examples/: horizontal.rs  nested_groups.rs  vertical.rs
src/utils/: mod.rs
styles/: styles.css
